fix height of hero image on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,4 +192,8 @@ label {
     .figure {
         font-size: 12px;
     }
+
+    #hero-image {
+        height: 150px;
+    }
 }
